* Fixed hover state of copyright atom on mobile devices * Fixed height of autocomplete

--- a/src/styles/atoms/_atoms.autocomplete.scss
+++ b/src/styles/atoms/_atoms.autocomplete.scss
@@ -10,7 +10,7 @@
   border-left: 1px solid $input-border;
   border-right: 1px solid $input-border;
   box-shadow: $box-shadow;
-  max-height: $spacer * 10;
+  max-height: calc(#{$spacer * 10 - $spacer / 2} - 5px); // 5 rows - half a row (for clarity) - 5 borders of 1px
   opacity: 0;
   overflow-y: scroll;
   text-align: left;
